--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -228,6 +228,10 @@ p {
       text-align: center;
     }
 
+    @media screen and (max-height: 500px) {
+      display: none;
+    }
+
     .contact-info {
       justify-content: center;
       display: flex;
