--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,7 @@
-$primary: #0f62fe;
-$primary-light: rgba(15, 98, 254, 0.9);
+$primary: #04234b;
+$primary-light: teal;
 $secondary: hsl(15, 69%, 52%);
 $dark: #000;
 $light: #f0e6e6;
-$primary2: #d95c32;
+$primary2: rgb(167, 61, 26);
 $primary2-light: rgba(217, 92, 50, 0.5);
