--- a/styles/index.scss
+++ b/styles/index.scss
@@ -412,7 +412,7 @@ header {
   .toggler {
     position: fixed;
     bottom: 5%;
-    right: 5%;
+    left: 5%;
     z-index: 20;
     font-size: 2rem;
     cursor: pointer;
@@ -562,7 +562,7 @@ header {
           linear-gradient(transparent, rgba(0, 0, 0, 0.2));
 
         @media screen and (max-width: 768px) {
-          max-width: 10rem;
+          max-width: 15rem;
         }
         // @media screen and (min-width: 992px) {
         //   max-width: 35rem;
