--- a/styles/index.scss
+++ b/styles/index.scss
@@ -411,7 +411,7 @@ header {
 
   .toggler {
     position: fixed;
-    bottom: 5%;
+    bottom: 4%;
     left: 5%;
     z-index: 20;
     font-size: 2rem;
@@ -444,7 +444,11 @@ header {
       color: $dark;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
+
+      @media screen and (max-width: 768px) {
+        align-items: center;
+      }
 
       .name-title {
         font-weight: bold;
