--- a/styles/index.scss
+++ b/styles/index.scss
@@ -557,6 +557,8 @@ header {
       img {
         width: 100%;
         max-width: 20rem;
+        height: 100%;
+        max-height: 20em;
         border-radius: 2em;
         border: 3px solid $primary;
         box-shadow: 0 0 5px $primary, 0 0 5px $primary, 0 0 10px $primary,
@@ -567,6 +569,7 @@ header {
 
         @media screen and (max-width: 768px) {
           max-width: 15rem;
+          max-height: 15em;
         }
         // @media screen and (min-width: 992px) {
         //   max-width: 35rem;
