--- a/styles/index.scss
+++ b/styles/index.scss
@@ -546,8 +546,9 @@ header {
       }
     }
     .picture {
-      display: flex;
-      justify-content: flex-end;
+      margin-bottom: 1em;
+      max-width: 20em;
+      max-height: 20em;
       @media screen and (max-width: 768px) {
         justify-content: center;
         order: -1;
@@ -556,9 +557,7 @@ header {
 
       img {
         width: 100%;
-        max-width: 20rem;
         height: 100%;
-        max-height: 20em;
         border-radius: 2em;
         border: 3px solid $primary;
         box-shadow: 0 0 5px $primary, 0 0 5px $primary, 0 0 10px $primary,
@@ -567,13 +566,13 @@ header {
         -webkit-box-reflect: below 1px
           linear-gradient(transparent, rgba(0, 0, 0, 0.2));
 
-        @media screen and (max-width: 768px) {
-          max-width: 15rem;
-          max-height: 15em;
-        }
         // @media screen and (min-width: 992px) {
         //   max-width: 35rem;
         // }
+      }
+      @media screen and (max-width: 768px) {
+        max-width: 15em;
+        max-height: 15em;
       }
     }
   }
