--- a/styles/index.scss
+++ b/styles/index.scss
@@ -940,6 +940,7 @@ footer {
         max-height: 10rem;
         img {
           width: 100%;
+          height: 100%;
         }
         @media screen and (max-width: 768px) {
           max-width: 5rem;
