--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,7 @@
 $primary: #04234b;
 $primary-light: teal;
-$secondary: hsl(15, 69%, 52%);
+$secondary: #0d6efd;
 $dark: #000;
 $light: #f0e6e6;
-$primary2: rgb(167, 61, 26);
+$primary2: teal;
 $primary2-light: rgba(217, 92, 50, 0.5);
