--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,3 +5,17 @@ $dark: #000;
 $light: #f0e6e6;
 $primary2: teal;
 $primary2-light: rgba(217, 92, 50, 0.5);
+
+@mixin backdrop {
+  background: transparent;
+  border: none;
+  outline: none;
+  border-left: 1px solid rgba(255, 255, 255, 0.4);
+  border-top: 1px solid rgba(255, 255, 255, 0.4);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  box-shadow: 0px 2px 25px -3px rgba(0, 0, 0, 0.5);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  //   border-radius: 10px;
+}
