--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,6 +6,26 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+
+  &::-webkit-scrollbar {
+    margin-top: 1rem;
+    height: 0.6rem;
+    width: 0.6rem;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 0.5rem;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border: 2px solid $light;
+    background: $primary2;
+    border-radius: 1rem;
+  }
 }
 
 a {
@@ -27,19 +47,15 @@ p {
   .top-info {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 0.5rem;
-
-    @media screen and (max-width: 768px) {
-      display: block;
-      text-align: center;
-    }
 
     .contact-details {
       display: flex;
       justify-content: center;
       text-align: center;
       align-items: center;
-      margin-bottom: 1rem;
+      height: 100%;
 
       .contact-info {
         justify-content: center;
@@ -71,6 +87,7 @@ p {
     .social {
       // padding: 0.5em;
       i {
+        @include backdrop;
         color: $light;
         margin-right: 1rem;
         background: $primary-light;
@@ -83,6 +100,15 @@ p {
           color: $primary;
           box-shadow: 0 1px 5px 1px $primary;
         }
+      }
+    }
+
+    @media screen and (max-width: 768px) {
+      display: block;
+      text-align: center;
+
+      .contact-details {
+        margin-bottom: 1rem;
       }
     }
   }
@@ -102,6 +128,7 @@ p {
         justify-content: space-between;
 
         .menu-btn {
+          @include backdrop;
           background: $primary-light;
           color: $light;
           cursor: pointer;
@@ -127,6 +154,8 @@ p {
               a {
                 color: $light !important;
                 cursor: pointer;
+                animation: flicker 1.5s infinite alternate;
+
                 &:hover {
                   color: $dark;
                 }
@@ -134,9 +163,10 @@ p {
             }
           }
           @media screen and (max-width: 768px) {
+            @include backdrop;
             position: absolute;
             left: -100%;
-            top: 100%;
+            top: 200%;
             width: 100%;
             height: 65vh;
             display: flex;
@@ -212,6 +242,7 @@ header {
   }
 
   .toggler {
+    @include backdrop;
     position: fixed;
     bottom: 4%;
     left: 5%;
@@ -232,14 +263,15 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+
     @media screen and (max-width: 768px) {
       flex-direction: column;
     }
 
     .styled-title {
-      font-family: "Poppins", sans-serif;
+      // font-family: "Poppins", sans-serif;
       color: $primary;
-      font-weight: bold;
+      // font-weight: bold;
     }
     .text {
       width: 60%;
@@ -247,9 +279,15 @@ header {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      gap: 1rem;
 
       @media screen and (max-width: 768px) {
         align-items: center;
+      }
+
+      .hi {
+        display: flex;
+        gap: 1rem;
       }
 
       .name-title {
@@ -264,10 +302,12 @@ header {
 
       .btn-contact {
         display: flex;
+
         @media screen and (max-width: 768px) {
           justify-content: center;
         }
         .btn {
+          @include backdrop;
           font-size: 1.2rem;
           background: $primary;
           color: $light;
@@ -280,8 +320,8 @@ header {
             margin-right: 1rem;
           }
 
-          box-shadow: 0 0 1px $primary, 0 0 5px $primary, 0 0 10px $primary,
-            0 0 0 $primary;
+          // box-shadow: 0 0 1px $primary, 0 0 5px $primary, 0 0 10px $primary,
+          //   0 0 0 $primary;
           -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
 
           &:hover {
@@ -316,18 +356,24 @@ header {
       @media screen and (max-width: 768px) {
         width: 100%;
         text-align: center;
+        gap: 0;
+        margin-top: 2rem;
       }
       h1 {
         font-weight: bold;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         color: $primary;
         span {
-          font-size: 1.5rem;
+          // font-size: 1.5rem;
           color: $primary-light;
         }
       }
       h4 {
         font-size: 1rem;
+      }
+
+      .about-title {
+        width: 60%;
       }
 
       @media screen and (min-width: 992px) {
@@ -348,33 +394,39 @@ header {
       }
     }
     .picture {
-      margin: 1em 0;
-      max-width: 20em;
+      margin: 0;
+      max-width: 25em;
       max-height: 20em;
-      @media screen and (max-width: 768px) {
-        justify-content: center;
-        order: -1;
-        width: 100%;
-      }
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
       img {
+        @include backdrop;
         width: 100%;
         height: 100%;
         border-radius: 2em;
-        border: 3px solid $primary;
-        box-shadow: 0 0 5px $primary, 0 0 5px $primary, 0 0 10px $primary,
+        border: 3px solid $primary2;
+        box-shadow: 0 0 5px $primary, 0 0 5px $primary, 0 0 0 $primary,
           0 0 0 $primary;
         background: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
         -webkit-box-reflect: below 1px
           linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+        animation: morph 3s linear infinite;
+        transition: all 1s ease-in-out;
+        padding: 0.5rem;
+        // padding: 1rem;
 
         // @media screen and (min-width: 992px) {
         //   max-width: 35rem;
         // }
       }
       @media screen and (max-width: 768px) {
-        max-width: 15em;
-        max-height: 15em;
+        max-width: 18em;
+        max-height: 18em;
+        justify-content: center;
+        order: -1;
+        width: 100%;
       }
     }
   }
@@ -437,6 +489,7 @@ header {
               padding: 2rem;
               position: relative;
               overflow: hidden;
+              @include backdrop;
 
               .desc-slide {
                 position: absolute;
@@ -483,6 +536,7 @@ header {
               padding: 1rem;
               position: relative;
               overflow: hidden;
+              @include backdrop;
 
               .contact-slide {
                 position: absolute;
@@ -511,6 +565,9 @@ header {
                 justify-content: flex-end;
                 align-items: center;
                 margin-bottom: 0.7rem;
+                @include backdrop;
+                padding: 1rem;
+
                 @media screen and (max-width: 768px) {
                   margin-bottom: 0.4rem;
                 }
@@ -529,6 +586,8 @@ header {
           .techs-slide {
             background: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
             box-shadow: 0 0 0.8rem $primary;
+            @include backdrop;
+
             .slider {
               text-align: center;
               padding: 1rem 0;
@@ -559,6 +618,7 @@ header {
             box-shadow: 0 0 0.8rem $primary;
             padding: 1rem;
             text-align: center;
+            @include backdrop;
 
             transition: all 0.5s ease-in-out;
 
@@ -572,6 +632,7 @@ header {
               }
             }
             i {
+              @include backdrop;
               font-size: 2rem;
               padding: 0.2rem 0.8rem;
               border: 2px solid $primary;
@@ -579,7 +640,7 @@ header {
               font-weight: bold;
               margin-bottom: 1.5rem;
               background: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
-              box-shadow: 0 0 0.8rem $primary;
+              box-shadow: 0 0 0.2rem $primary;
             }
           }
         }
@@ -600,25 +661,20 @@ header {
     }
     .works-section {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(2, 1fr);
       grid-gap: 2rem;
       place-items: center;
 
-      @media screen and (max-width: 992px) {
-        grid-template-columns: repeat(2, 1fr);
-      }
-      @media screen and (max-width: 768px) {
-        grid-template-columns: repeat(1, 1fr);
-      }
       .work {
         position: relative;
         overflow: hidden;
-        border-radius: 1rem;
+        // border-radius: 1rem;
         box-shadow: 0 0 1px $primary, 0 0 5px $primary, 0 0 10px $primary,
           0 0 0 $primary;
         background: linear-gradient(transparent, #0005);
         -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
         padding: 0.5rem;
+        @include backdrop;
 
         &:hover {
           .caption {
@@ -626,8 +682,9 @@ header {
           }
         }
         img {
-          max-width: 18rem;
-          border-radius: 1rem;
+          // max-width: 25rem;
+          width: 100%;
+          // border-radius: 1rem;
 
           // max-height: 9rem;
         }
@@ -642,10 +699,32 @@ header {
           transition: all 0.5s ease-in-out;
           top: 0;
           left: -100%;
-          background: $primary-light;
+          background: rgba(0, 0, 0, 0.5);
           color: $light;
           a {
             color: inherit;
+            font-weight: bold;
+            text-decoration: underline !important;
+          }
+        }
+      }
+
+      @media screen and (max-width: 992px) {
+        grid-template-columns: repeat(2, 1fr);
+
+        .work {
+          max-width: 100%;
+          img {
+            // max-widt
+          }
+        }
+      }
+      @media screen and (max-width: 768px) {
+        grid-template-columns: repeat(1, 1fr);
+
+        .work {
+          img {
+            // max-width: 18rem;
           }
         }
       }
@@ -685,6 +764,7 @@ header {
           border: none;
           border-bottom: 2px solid $primary;
           box-shadow: none;
+          @include backdrop;
 
           &::placeholder {
             color: $primary;
@@ -700,6 +780,7 @@ header {
           justify-content: flex-end;
           .btn {
             // width: 50%;
+            @include backdrop;
             background: $primary;
             color: $light;
           }
@@ -950,5 +1031,36 @@ footer {
         }
       }
     }
+  }
+}
+
+@keyframes morph {
+  0%,
+  100% {
+    border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
+  }
+  33% {
+    border-radius: 72% 28% 48% 48% / 28% 28% 72% 72%;
+  }
+  66% {
+    border-radius: 100% 56% 56% 100% / 100% 100% 56% 56%;
+  }
+}
+
+@keyframes flicker {
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #0fa,
+      0 0 80px #0fa, 0 0 90px #0fa, 0 0 100px #0fa, 0 0 150px #0fa;
+  }
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
   }
 }
