--- a/styles/index.scss
+++ b/styles/index.scss
@@ -320,8 +320,8 @@ header {
             margin-right: 1rem;
           }
 
-          // box-shadow: 0 0 1px $primary, 0 0 5px $primary, 0 0 10px $primary,
-          //   0 0 0 $primary;
+          box-shadow: 0 0 1px $primary, 0 0 5px $primary, 0 0 10px $primary,
+            0 0 0 $primary;
           -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
 
           &:hover {
@@ -412,7 +412,7 @@ header {
         background: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
         -webkit-box-reflect: below 1px
           linear-gradient(transparent, rgba(0, 0, 0, 0.2));
-        // animation: morph 3s linear infinite;
+        animation: morph 3s linear infinite;
         border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
         transition: all 1s ease-in-out;
         padding: 0.3rem;
