--- a/styles/index.scss
+++ b/styles/index.scss
@@ -412,7 +412,7 @@ header {
         background: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
         -webkit-box-reflect: below 1px
           linear-gradient(transparent, rgba(0, 0, 0, 0.2));
-        animation: morph 3s linear infinite;
+        // animation: morph 3s linear infinite;
         border-radius: 42% 56% 72% 28% / 42% 42% 56% 48%;
         transition: all 1s ease-in-out;
         padding: 0.3rem;
