--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,12 @@
 @import "./variables";
 
+@font-face {
+  font-family: "Nexa";
+  src: url("/font/NexaRegular.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body {
   padding: 0;
@@ -34,7 +41,7 @@ a {
 }
 
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: "Nexa", sans-serif;
   box-sizing: border-box;
 }
 
